--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"fs-extra": "^5.0.0",
 		"gzip-size": "^4.1.0",
 		"inquirer": "^5.0.0",
-		"lodash": "4.17.11",
+		"lodash": "^4.17.11",
 		"memize": "^1.0.5",
 		"node-sass": "^4.7.2",
 		"ora": "^1.3.0",
@@ -65,7 +65,6 @@
 		"redux": "^4.0.1",
 		"resolve-pkg": "^1.0.0",
 		"sass-loader": "^6.0.6",
-		"shelljs": "^0.8.0",
 		"style-loader": "^0.19.1",
 		"stylelint": "^9.10.1",
 		"update-notifier": "^2.3.0",
